--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>TrigguiApp – Trascendente</title>
+  <title>TrigguiApp – Un instante</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       height: 100%;
-      width: 100%;
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
     }
     .grid {
       position: absolute;
-      top: 1.5vw;
-      bottom: 1.5vw;
-      left: 1.5vw;
-      right: 1.5vw;
+      top: 1.5vw; bottom: 1.5vw;
+      left: 1.5vw; right: 1.5vw;
       display: grid;
       gap: 1vw;
+      z-index: 1;
     }
     .block {
       border-radius: 18px;
@@ -32,25 +30,19 @@
       position: relative;
       font-size: 1.1rem;
       background-size: 200% 200%;
-      animation: fadeIn 1s ease forwards;
       cursor: pointer;
       flex-direction: column;
       transition: transform 0.3s;
     }
-    .block:hover {
-      transform: scale(1.03);
-    }
-    .label {
-      z-index: 1;
-      font-weight: bold;
-    }
+    .block:hover { transform: scale(1.03); }
+    .label { z-index: 1; font-weight: bold; }
     .label.guia {
-      background: rgba(255, 255, 255, 0.15);
+      background: rgba(255,255,255,0.12);
       border: 2px solid #ff4081;
       padding: 0.6rem 1rem;
       border-radius: 12px;
-      font-size: 1.05rem;
-      animation: glow 1.8s ease-in-out infinite;
+      font-size: 1rem;
+      animation: glow 2s ease-in-out infinite;
     }
     .frase, .portada {
       position: absolute;
@@ -62,14 +54,10 @@
       text-align: center;
       font-family: 'Poppins', sans-serif;
     }
-    .frase {
-      font-size: 1rem;
-      animation: fadeIn 0.6s ease forwards;
-    }
+    .frase { font-size: 1rem; animation: fadeIn 0.6s ease forwards; }
     .portada {
       animation: glow 6s ease-in-out infinite;
       flex-direction: column;
-      gap: 1rem;
     }
     .portada img {
       max-width: 85%;
@@ -86,204 +74,183 @@
       display: none;
       flex-direction: column;
       align-items: center;
-      z-index: 10;
+      z-index: 5;
       text-align: center;
     }
     .ctaZone button {
       background: #00ffc3;
       color: #000;
       border: none;
-      padding: 0.8rem 1.6rem;
+      padding: 0.9rem 1.8rem;
       border-radius: 999px;
-      font-size: 1.05rem;
+      font-size: 1.1rem;
       font-weight: bold;
       cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-      transition: background 0.3s;
-    }
-    .ctaZone button:hover {
-      background: #a1ffe7;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.3);
     }
 
-    .celebracion-overlay {
+    .celebracion {
       position: fixed;
       inset: 0;
-      background: rgba(0, 0, 0, 0.75);
+      background: rgba(0, 0, 0, 0.78);
       display: none;
       justify-content: center;
       align-items: center;
-      z-index: 20;
-      animation: fadeIn 0.5s ease both;
+      z-index: 10;
     }
-    .celebracion-message {
-      font-size: 1.4rem;
+    .celebracion span {
+      font-family: 'Poppins', sans-serif;
       color: #fff;
-      background: rgba(255, 255, 255, 0.05);
-      padding: 1.2rem 2rem;
+      font-size: 1.5rem;
+      background: rgba(255,255,255,0.08);
+      padding: 1.5rem 2rem;
       border-radius: 16px;
       text-align: center;
-      font-family: 'Poppins', sans-serif;
-      box-shadow: 0 0 30px rgba(255, 255, 255, 0.1);
-      animation: celebracion 1.2s ease both;
+      animation: pop 1.2s ease;
     }
     .resaltado {
       color: #ffeb3b;
-      font-weight: 700;
+      font-weight: bold;
     }
-
     .trigguiletras {
       position: fixed;
-      top: 1vh;
-      right: 1vw;
-      height: 18px;
-      opacity: 0.5;
-      z-index: 5;
+      top: 1.5vh;
+      right: 2vw;
+      height: 20px;
+      opacity: 0.4;
+      z-index: 2;
+    }
+    .welcome {
+      position: fixed;
+      inset: 0;
+      background: #000;
+      color: #fff;
+      font-size: 1.6rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Poppins', sans-serif;
+      z-index: 20;
+      animation: fadeOut 2s 2s forwards;
     }
 
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; }
+    }
     @keyframes glow {
-      0%, 100% { box-shadow: 0 0 8px #ff4081; }
+      0%, 100% { box-shadow: 0 0 10px #ff4081; }
       50% { box-shadow: 0 0 18px #ff80ab; }
     }
-    @keyframes celebracion {
+    @keyframes pop {
       0% { transform: scale(0.8); opacity: 0; }
-      60% { transform: scale(1.1); opacity: 1; }
+      50% { transform: scale(1.05); opacity: 1; }
       100% { transform: scale(1); }
     }
   </style>
 </head>
 <body>
+  <div class="welcome">Encuentra un libro. Tócalo. Ábrelo.</div>
   <div class="grid" id="gridContainer"></div>
-
   <div class="ctaZone" id="ctaZone">
-    <button id="ctaBtn">📚 Haz clic si abriste un libro físico</button>
+    <button id="ctaBtn">✨ Sí, abrí un libro físico</button>
+    <small style="color:#aaa; font-family:'Poppins'; margin-top:4px;">No importa cuál libro. Lo que importa es que lo abriste.</small>
   </div>
-
-  <div class="celebracion-overlay" id="celebracionOverlay">
-    <div class="celebracion-message" id="celebracionMsg">
-      ✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨
-    </div>
-  </div>
-
-  <img src="/trigguiletras.png" alt="Trigguiletras" class="trigguiletras" />
-
+  <div class="celebracion" id="celebracion"><span id="celebracionMsg">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</span></div>
+  <img src="/trigguiletras.png" class="trigguiletras" />
   <script>
-    const grid = document.getElementById("gridContainer");
-    const ctaZone = document.getElementById("ctaZone");
-    const ctaBtn = document.getElementById("ctaBtn");
-    const celebracionOverlay = document.getElementById("celebracionOverlay");
-    const celebracionMsg = document.getElementById("celebracionMsg");
+    const $ = sel => document.querySelector(sel);
+    const grid = $("#gridContainer");
+    const cta = $("#ctaZone");
+    const btn = $("#ctaBtn");
+    const overlay = $("#celebracion");
+    const msg = $("#celebracionMsg");
 
-    const emojis = ["🌊", "🛡️", "🧠", "📘", "🔮", "❤️", "✨", "🪞"];
-    let libro = null;
-    let portadaBloque = 0;
-    let bloqueGuia = 0;
-    let revelado = false;
+    let libro, portadaI = 0, guiaI = 0, revelado = false;
 
-    function generarGradiente(hex) {
-      const r = parseInt(hex.slice(1,3), 16);
-      const g = parseInt(hex.slice(3,5), 16);
-      const b = parseInt(hex.slice(5,7), 16);
-      const light = `rgba(${Math.min(r+30,255)},${Math.min(g+30,255)},${Math.min(b+30,255)},0.85)`;
-      return `linear-gradient(135deg, ${hex}, ${light})`;
+    const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
+
+    function grad(hex) {
+      const r = parseInt(hex.slice(1,3),16), g = parseInt(hex.slice(3,5),16), b = parseInt(hex.slice(5,7),16);
+      return `linear-gradient(135deg, ${hex}, rgba(${Math.min(r+40,255)},${Math.min(g+40,255)},${Math.min(b+40,255)},.85))`;
     }
 
-    function dibujarUI() {
-      const w = window.innerWidth, h = window.innerHeight;
-      const cols = w > h ? 4 : 2;
-      const rows = 4 / cols;
-      grid.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;
-      grid.style.gridTemplateRows = `repeat(${rows}, 1fr)`;
+    function renderUI() {
+      const w = innerWidth, h = innerHeight;
+      const cols = w > h ? 4 : 2, rows = 4 / cols;
+      grid.style.gridTemplateColumns = `repeat(${cols},1fr)`;
+      grid.style.gridTemplateRows = `repeat(${rows},1fr)`;
       grid.innerHTML = "";
-
-      libro.palabras.forEach((palabra, i) => {
+      libro.palabras.forEach((txt, i) => {
         const b = document.createElement("div");
         b.className = "block";
-        b.dataset.index = i;
-
-        if (i === bloqueGuia) {
-          b.style.background = "linear-gradient(135deg, #ff4081, #ff80ab)";
-        } else {
-          b.style.background = generarGradiente(libro.colores[i] || "#555");
-        }
-
+        b.dataset.i = i;
+        b.style.background = i === guiaI ? "linear-gradient(135deg, #ff4081, #ff80ab)" : grad(libro.colores[i]);
         const label = document.createElement("div");
-        label.className = "label" + (i === bloqueGuia ? " guia" : "");
-        label.innerText = i === bloqueGuia ? "¿Qué sientes?" : `${emojis[i]} ${palabra}`;
-
+        label.className = i === guiaI ? "label guia" : "label";
+        label.textContent = i === guiaI ? "¿Dónde crees que está el libro?" : `${emojis[i]} ${txt}`;
         const frase = document.createElement("div");
         frase.className = "frase";
-        frase.innerText = libro.frases[i];
-
+        frase.textContent = libro.frases[i];
         const portada = document.createElement("div");
         portada.className = "portada";
         const img = document.createElement("img");
         img.src = libro.portada;
         portada.appendChild(img);
-
         b.append(label, frase, portada);
         b.onclick = () => manejarClick(b);
         grid.appendChild(b);
       });
     }
 
-    function manejarClick(bloque) {
-      const i = parseInt(bloque.dataset.index);
-      const children = bloque.children;
+    function manejarClick(b) {
+      const i = +b.dataset.i;
       if (revelado) return location.reload();
-
-      if (i === portadaBloque) {
-        [...children].forEach(c => c.style.display = "none");
-        children[2].style.display = "flex";
-
+      if (i === portadaI) {
+        b.children[0].style.display = "none";
+        b.children[2].style.display = "flex";
         [...grid.children].forEach((blk, j) => {
           if (j !== i) {
             blk.children[0].style.display = "none";
             blk.children[1].style.display = "flex";
           }
         });
-
         revelado = true;
-        ctaZone.style.display = "flex";
+        cta.style.display = "flex";
       } else {
-        bloque.children[0].style.display = "none";
-        bloque.children[1].style.display = "flex";
+        b.children[0].style.display = "none";
+        b.children[1].style.display = "flex";
       }
     }
 
-    ctaBtn.onclick = async () => {
-      ctaBtn.disabled = true;
-      celebracionOverlay.style.display = "flex";
-      celebracionMsg.innerHTML = '✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨';
+    btn.onclick = async () => {
+      overlay.style.display = "flex";
+      msg.innerHTML = `✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨`;
       try {
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
-        celebracionMsg.innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨`;
+        msg.innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString("es-MX")}</span> libros físicos ✨`;
       } catch {
-        celebracionMsg.innerText = "📚 Error al contar libros";
+        msg.innerText = "📚 ¡Error al contar libros!";
       }
       setTimeout(() => location.reload(), 3000);
     };
 
-    async function iniciar() {
-      try {
-        const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
-        const data = await res.json();
-        libro = data.libros[Math.floor(Math.random() * data.libros.length)];
-        portadaBloque = Math.floor(Math.random() * 4);
-        do { bloqueGuia = Math.floor(Math.random() * 4); } while (bloqueGuia === portadaBloque);
-        dibujarUI();
-      } catch (e) {
-        console.error("Error cargando contenido:", e);
-      }
+    async function init() {
+      const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
+      const data = await res.json();
+      libro = data.libros[Math.floor(Math.random() * data.libros.length)];
+      portadaI = Math.floor(Math.random() * 4);
+      do { guiaI = Math.floor(Math.random() * 4); } while (guiaI === portadaI);
+      renderUI();
     }
 
-    window.addEventListener("load", iniciar);
-    window.addEventListener("resize", dibujarUI);
-    window.addEventListener("orientationchange", dibujarUI);
+    window.addEventListener("load", init);
+    window.addEventListener("resize", renderUI);
+    window.addEventListener("orientationchange", renderUI);
   </script>
 </body>
 </html>
