--- a/public/index.html
+++ b/public/index.html
@@ -3,254 +3,236 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>TrigguiApp – Un instante</title>
+  <title>TrigguiApp – Toca un bloque</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
+      width: 100%;
       height: 100%;
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
+      overflow: hidden;
     }
-    .grid {
-      position: absolute;
-      top: 1.5vw; bottom: 1.5vw;
-      left: 1.5vw; right: 1.5vw;
+    body.dark {
+      background: #000;
+    }
+    #grid {
       display: grid;
-      gap: 1vw;
-      z-index: 1;
+      gap: 1.5vw;
+      padding: 2vw;
+      width: 100%;
+      height: 100%;
+      transition: all 0.5s ease;
     }
     .block {
-      border-radius: 18px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      border-radius: 20px;
       color: white;
-      text-align: center;
-      position: relative;
-      font-size: 1.1rem;
-      background-size: 200% 200%;
-      cursor: pointer;
-      flex-direction: column;
-      transition: transform 0.3s;
-    }
-    .block:hover { transform: scale(1.03); }
-    .label { z-index: 1; font-weight: bold; }
-    .label.guia {
-      background: rgba(255,255,255,0.12);
-      border: 2px solid #ff4081;
-      padding: 0.6rem 1rem;
-      border-radius: 12px;
-      font-size: 1rem;
-      animation: glow 2s ease-in-out infinite;
-    }
-    .frase, .portada {
-      position: absolute;
-      inset: 0;
-      display: none;
+      font-weight: bold;
+      font-size: 1.4rem;
+      display: flex;
       justify-content: center;
       align-items: center;
-      padding: 1rem;
       text-align: center;
+      background-size: 200% 200%;
+      background-position: center;
+      cursor: pointer;
+      position: relative;
+      overflow: hidden;
+    }
+    .block-content {
+      padding: 8px;
+      z-index: 2;
+      position: absolute;
+    }
+    .accionable {
       font-family: 'Poppins', sans-serif;
+      font-size: 1.1rem;
+      font-weight: 600;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+      text-align: center;
     }
-    .frase { font-size: 1rem; animation: fadeIn 0.6s ease forwards; }
-    .portada {
-      animation: glow 6s ease-in-out infinite;
-      flex-direction: column;
+    .portada-wrapper {
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-    .portada img {
-      max-width: 85%;
-      max-height: 75%;
-      border-radius: 16px;
-      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
+    .portada-wrapper img {
+      width: 85%;
+      height: auto;
+      max-height: 90%;
+      object-fit: contain;
+      border-radius: 20px;
+      box-shadow: 0 10px 24px rgba(0,0,0,0.4);
     }
-
-    .ctaZone {
-      position: fixed;
-      bottom: 3vh;
+    #mensajeInicial {
+      position: absolute;
+      top: 3%;
       left: 50%;
       transform: translateX(-50%);
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      z-index: 5;
-      text-align: center;
-    }
-    .ctaZone button {
-      background: #00ffc3;
-      color: #000;
-      border: none;
-      padding: 0.9rem 1.8rem;
-      border-radius: 999px;
+      color: #fff;
       font-size: 1.1rem;
-      font-weight: bold;
-      cursor: pointer;
-      box-shadow: 0 4px 14px rgba(0,0,0,0.3);
-    }
-
-    .celebracion {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.78);
-      display: none;
-      justify-content: center;
-      align-items: center;
+      font-family: 'Poppins', sans-serif;
+      background: rgba(0,0,0,0.4);
+      padding: 10px 20px;
+      border-radius: 999px;
       z-index: 10;
-    }
-    .celebracion span {
-      font-family: 'Poppins', sans-serif;
-      color: #fff;
-      font-size: 1.5rem;
-      background: rgba(255,255,255,0.08);
-      padding: 1.5rem 2rem;
-      border-radius: 16px;
       text-align: center;
-      animation: pop 1.2s ease;
+      white-space: nowrap;
     }
-    .resaltado {
-      color: #ffeb3b;
-      font-weight: bold;
-    }
-    .trigguiletras {
-      position: fixed;
-      top: 1.5vh;
-      right: 2vw;
-      height: 20px;
-      opacity: 0.4;
-      z-index: 2;
-    }
-    .welcome {
-      position: fixed;
-      inset: 0;
-      background: #000;
-      color: #fff;
-      font-size: 1.6rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    #shockBtn {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      background: linear-gradient(135deg, #00c853, #b2ff59);
+      color: black;
       font-family: 'Poppins', sans-serif;
-      z-index: 20;
-      animation: fadeOut 2s 2s forwards;
+      font-weight: 700;
+      border: none;
+      border-radius: 999px;
+      padding: 14px 24px;
+      font-size: 1rem;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+      display: none;
+      cursor: pointer;
+      z-index: 11;
     }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+    #contador {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #ffee58;
+      font-size: 1.6rem;
+      font-family: 'Poppins', sans-serif;
+      background: rgba(0,0,0,0.6);
+      padding: 20px 30px;
+      border-radius: 20px;
+      text-align: center;
+      display: none;
+      z-index: 12;
+      box-shadow: 0 0 20px rgba(255,255,255,0.1);
     }
-    @keyframes fadeOut {
-      to { opacity: 0; visibility: hidden; }
-    }
-    @keyframes glow {
-      0%, 100% { box-shadow: 0 0 10px #ff4081; }
-      50% { box-shadow: 0 0 18px #ff80ab; }
-    }
-    @keyframes pop {
-      0% { transform: scale(0.8); opacity: 0; }
-      50% { transform: scale(1.05); opacity: 1; }
-      100% { transform: scale(1); }
+    #logoTriggui {
+      position: absolute;
+      bottom: 14px;
+      left: 14px;
+      height: 22px;
+      opacity: 0.4;
     }
   </style>
 </head>
 <body>
-  <div class="welcome">Encuentra un libro. Tócalo. Ábrelo.</div>
-  <div class="grid" id="gridContainer"></div>
-  <div class="ctaZone" id="ctaZone">
-    <button id="ctaBtn">✨ Sí, abrí un libro físico</button>
-    <small style="color:#aaa; font-family:'Poppins'; margin-top:4px;">No importa cuál libro. Lo que importa es que lo abriste.</small>
-  </div>
-  <div class="celebracion" id="celebracion"><span id="celebracionMsg">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</span></div>
-  <img src="/trigguiletras.png" class="trigguiletras" />
+  <div id="mensajeInicial">Toca el bloque donde creas que está el libro 📚</div>
+  <div id="grid"></div>
+  <button id="shockBtn">✅ ¡Sí! Abrí un libro físico</button>
+  <div id="contador"></div>
+  <img id="logoTriggui" src="/trigguiletras.png" />
+
   <script>
-    const $ = sel => document.querySelector(sel);
-    const grid = $("#gridContainer");
-    const cta = $("#ctaZone");
-    const btn = $("#ctaBtn");
-    const overlay = $("#celebracion");
-    const msg = $("#celebracionMsg");
+    const $ = id => document.getElementById(id);
+    let libroActual, bloquePortada, revelado = false;
 
-    let libro, portadaI = 0, guiaI = 0, revelado = false;
-
-    const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
-
-    function grad(hex) {
-      const r = parseInt(hex.slice(1,3),16), g = parseInt(hex.slice(3,5),16), b = parseInt(hex.slice(5,7),16);
-      return `linear-gradient(135deg, ${hex}, rgba(${Math.min(r+40,255)},${Math.min(g+40,255)},${Math.min(b+40,255)},.85))`;
-    }
-
-    function renderUI() {
-      const w = innerWidth, h = innerHeight;
-      const cols = w > h ? 4 : 2, rows = 4 / cols;
-      grid.style.gridTemplateColumns = `repeat(${cols},1fr)`;
-      grid.style.gridTemplateRows = `repeat(${rows},1fr)`;
-      grid.innerHTML = "";
-      libro.palabras.forEach((txt, i) => {
-        const b = document.createElement("div");
-        b.className = "block";
-        b.dataset.i = i;
-        b.style.background = i === guiaI ? "linear-gradient(135deg, #ff4081, #ff80ab)" : grad(libro.colores[i]);
-        const label = document.createElement("div");
-        label.className = i === guiaI ? "label guia" : "label";
-        label.textContent = i === guiaI ? "¿Dónde crees que está el libro?" : `${emojis[i]} ${txt}`;
-        const frase = document.createElement("div");
-        frase.className = "frase";
-        frase.textContent = libro.frases[i];
-        const portada = document.createElement("div");
-        portada.className = "portada";
-        const img = document.createElement("img");
-        img.src = libro.portada;
-        portada.appendChild(img);
-        b.append(label, frase, portada);
-        b.onclick = () => manejarClick(b);
-        grid.appendChild(b);
+    fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
+      .then(res => res.json())
+      .then(data => {
+        const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
+        libroActual = libro;
+        bloquePortada = Math.floor(Math.random()*4);
+        iniciarUI(libro);
       });
+
+    function generarGradiente(color) {
+      const h = parseInt(color.slice(1,3),16),
+            l = parseInt(color.slice(3,5),16),
+            s = parseInt(color.slice(5,7),16);
+      const light = `rgba(${Math.min(h+40,255)},${Math.min(l+40,255)},${Math.min(s+40,255)},0.9)`;
+      return `linear-gradient(135deg, ${color}, ${light})`;
     }
 
-    function manejarClick(b) {
-      const i = +b.dataset.i;
+    function ajustarLayout() {
+      const grid = $("grid");
+      const width = window.innerWidth;
+      const height = window.innerHeight;
+      const portrait = height >= width;
+      grid.style.gridTemplateColumns = portrait ? "1fr 1fr" : "repeat(4, 1fr)";
+      grid.style.gridTemplateRows = portrait ? "1fr 1fr" : "1fr";
+      grid.style.height = "100vh";
+    }
+
+    function iniciarUI(libro) {
+      ajustarLayout();
+      const grid = $("grid");
+      grid.innerHTML = "";
+      const randomPrompt = Math.floor(Math.random() * 4);
+      libro.palabras.forEach((palabra, i) => {
+        const div = document.createElement("div");
+        div.className = "block";
+        div.id = `bloque${i}`;
+        div.style.background = generarGradiente(libro.colores[i]);
+        div.innerHTML = `
+          <div class="block-content label">${i === randomPrompt ? "¿Qué sientes?" : palabra}</div>
+          <div class="block-content accionable" id="bloque${i}Text">${libro.frases[i]}</div>`;
+        div.onclick = () => manejarClick(i);
+        grid.appendChild(div);
+      });
+      document.querySelectorAll('.accionable').forEach(el => el.style.opacity = 0);
+    }
+
+    function manejarClick(i) {
       if (revelado) return location.reload();
-      if (i === portadaI) {
-        b.children[0].style.display = "none";
-        b.children[2].style.display = "flex";
-        [...grid.children].forEach((blk, j) => {
-          if (j !== i) {
-            blk.children[0].style.display = "none";
-            blk.children[1].style.display = "flex";
-          }
-        });
-        revelado = true;
-        cta.style.display = "flex";
-      } else {
-        b.children[0].style.display = "none";
-        b.children[1].style.display = "flex";
+      if (i === bloquePortada) revelarTodo();
+      else {
+        $(`bloque${i}Text`).style.opacity = 1;
+        $(`bloque${i}`).querySelector(".label").style.opacity = 0;
       }
     }
 
-    btn.onclick = async () => {
-      overlay.style.display = "flex";
-      msg.innerHTML = `✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨`;
+    function revelarTodo() {
+      document.body.classList.add("dark");
+      document.getElementById("mensajeInicial").style.display = "none";
+      libroActual.palabras.forEach((_, i) => {
+        const block = $(`bloque${i}`);
+        if (i === bloquePortada) {
+          block.innerHTML = "";
+          const wrapper = document.createElement("div");
+          wrapper.className = "portada-wrapper";
+          const img = document.createElement("img");
+          img.src = libroActual.portada;
+          img.alt = "Portada";
+          wrapper.appendChild(img);
+          block.appendChild(wrapper);
+          block.style.background = "none";
+        } else {
+          $(`bloque${i}Text`).style.opacity = 1;
+          block.querySelector(".label").style.opacity = 0;
+        }
+      });
+      setTimeout(() => {
+        $("shockBtn").style.display = "block";
+      }, 2500);
+      revelado = true;
+    }
+
+    $("shockBtn").onclick = async () => {
+      $("shockBtn").style.display = "none";
+      $("contador").style.display = "block";
+      $("contador").innerText = "📚 Calculando libros abiertos...";
       try {
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
-        msg.innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString("es-MX")}</span> libros físicos ✨`;
+        $("contador").innerHTML = `✨ Gracias. Ya somos <strong>${data.total.toLocaleString('es-MX')}</strong> abriendo libros físicos ✨`;
       } catch {
-        msg.innerText = "📚 ¡Error al contar libros!";
+        $("contador").innerText = "📚 ¡Error al contar libros!";
       }
-      setTimeout(() => location.reload(), 3000);
     };
 
-    async function init() {
-      const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
-      const data = await res.json();
-      libro = data.libros[Math.floor(Math.random() * data.libros.length)];
-      portadaI = Math.floor(Math.random() * 4);
-      do { guiaI = Math.floor(Math.random() * 4); } while (guiaI === portadaI);
-      renderUI();
-    }
-
-    window.addEventListener("load", init);
-    window.addEventListener("resize", renderUI);
-    window.addEventListener("orientationchange", renderUI);
+    window.addEventListener("resize", ajustarLayout);
   </script>
 </body>
 </html>
