--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>TrigguiApp – Trascendente</title>
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
+  <title>TrigguiApp – Nivel Dios</title>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
@@ -16,47 +16,45 @@
     }
     .grid {
       position: absolute;
-      inset: 1.5vw;
+      top: 1.5vw;
+      bottom: 1.5vw;
+      left: 1.5vw;
+      right: 1.5vw;
       display: grid;
       gap: 1vw;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
     }
     .block {
-      border-radius: 18px;
+      border-radius: 16px;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: white;
       text-align: center;
+      color: white;
       position: relative;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       background-size: 200% 200%;
-      animation: fadeIn 1s ease forwards;
       cursor: pointer;
       flex-direction: column;
-      transition: transform 0.3s;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
     .block:hover {
-      transform: scale(1.03);
+      transform: scale(1.02);
+      box-shadow: 0 0 12px rgba(255,255,255,0.1);
     }
     .label {
       z-index: 1;
       font-weight: bold;
+      padding: 0.6rem 1rem;
+      border-radius: 10px;
+      background: rgba(255, 255, 255, 0.1);
     }
-    .label.guia {
-      background: rgba(255, 255, 255, 0.15);
-      border: 3px dashed #00ffc3;
-      padding: 0.8rem 1.2rem;
-      border-radius: 16px;
-      font-size: 1.1rem;
-      animation: brilla 1.5s infinite;
-      color: #00ffc3;
-    }
-    .guia-msg {
-      font-family: 'Poppins', sans-serif;
-      font-size: 0.85rem;
-      margin-top: 8px;
-      color: #00ffc3;
-      text-shadow: 0 0 6px rgba(0,255,200,0.4);
+    .guia {
+      background: #ff4081;
+      color: #fff;
+      border: 2px solid #fff;
+      animation: pulse 2s infinite;
     }
     .frase, .portada {
       position: absolute;
@@ -64,26 +62,23 @@
       display: none;
       justify-content: center;
       align-items: center;
-      padding: 1rem;
       text-align: center;
-      font-family: 'Poppins', sans-serif;
+      padding: 1rem;
     }
     .frase {
       font-size: 1rem;
       animation: fadeIn 0.6s ease forwards;
     }
     .portada {
-      animation: glow 6s ease-in-out infinite;
       flex-direction: column;
-      gap: 1rem;
+      animation: fadeIn 0.6s ease forwards;
     }
     .portada img {
-      max-width: 85%;
-      max-height: 75%;
-      border-radius: 16px;
+      max-width: 80%;
+      max-height: 80%;
+      border-radius: 14px;
       box-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
     }
-
     .ctaZone {
       position: fixed;
       bottom: 3vh;
@@ -99,69 +94,44 @@
       background: #00ffc3;
       color: #000;
       border: none;
-      padding: 0.9rem 1.8rem;
+      padding: 1rem 2rem;
       border-radius: 999px;
       font-size: 1.1rem;
       font-weight: bold;
       cursor: pointer;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.3);
-      transition: background 0.3s;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
-    .ctaZone button:hover {
-      background: #a1ffe7;
-    }
-
     .celebracion-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(0, 0, 0, 0.85);
+      background: rgba(0,0,0,0.8);
       display: none;
       justify-content: center;
       align-items: center;
       z-index: 20;
-      animation: fadeIn 0.5s ease both;
+      animation: fadeIn 0.4s ease both;
     }
     .celebracion-message {
       font-size: 1.6rem;
       color: #fff;
-      background: rgba(255, 255, 255, 0.08);
-      padding: 1.6rem 2.4rem;
-      border-radius: 20px;
       text-align: center;
-      font-family: 'Poppins', sans-serif;
-      box-shadow: 0 0 30px rgba(255, 255, 255, 0.1);
-      animation: celebracion 1s ease both;
+      padding: 2rem;
+      background: rgba(255,255,255,0.05);
+      border-radius: 20px;
     }
     .resaltado {
       color: #ffeb3b;
-      font-weight: 700;
-    }
-
-    .trigguiletras {
-      position: fixed;
-      top: 1vh;
-      right: 2vw;
-      height: 18px;
-      opacity: 0.4;
-      z-index: 5;
+      font-weight: bold;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
-    @keyframes glow {
-      0%, 100% { background: radial-gradient(circle, #ffffff05, #0000); }
-      50% { background: radial-gradient(circle, #ffffff20, #0000); }
-    }
-    @keyframes brilla {
-      0%, 100% { box-shadow: 0 0 10px #00ffc3; }
-      50% { box-shadow: 0 0 20px #00ffc3; }
-    }
-    @keyframes celebracion {
-      0% { transform: scale(0.8); opacity: 0; }
-      60% { transform: scale(1.05); opacity: 1; }
-      100% { transform: scale(1); }
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(255,64,129,0.6); }
+      70% { box-shadow: 0 0 0 10px rgba(255,64,129,0); }
+      100% { box-shadow: 0 0 0 0 rgba(255,64,129,0); }
     }
   </style>
 </head>
@@ -169,7 +139,7 @@
   <div class="grid" id="gridContainer"></div>
 
   <div class="ctaZone" id="ctaZone">
-    <button id="ctaBtn">✅ Ya abrí un libro físico. Contarlo</button>
+    <button id="ctaBtn">📚 ¡Haz clic si abriste un libro físico!</button>
   </div>
 
   <div class="celebracion-overlay" id="celebracionOverlay">
@@ -178,8 +148,6 @@
     </div>
   </div>
 
-  <img src="/trigguiletras.png" alt="Trigguiletras" class="trigguiletras" />
-
   <script>
     const grid = document.getElementById("gridContainer");
     const ctaZone = document.getElementById("ctaZone");
@@ -187,28 +155,29 @@
     const celebracionOverlay = document.getElementById("celebracionOverlay");
     const celebracionMsg = document.getElementById("celebracionMsg");
 
-    const emojis = ["🌊", "🛡️", "🧠", "📘", "🔮", "❤️", "✨", "🪞"];
     let libro = null;
     let portadaBloque = 0;
-    let bloqueGuia = 0;
+    let guiaBloque = 0;
     let revelado = false;
 
     function generarGradiente(hex) {
       const r = parseInt(hex.slice(1,3), 16);
       const g = parseInt(hex.slice(3,5), 16);
       const b = parseInt(hex.slice(5,7), 16);
-      const light = `rgba(${Math.min(r+30,255)},${Math.min(g+30,255)},${Math.min(b+30,255)},0.85)`;
-      return `linear-gradient(135deg, ${hex}, ${light})`;
+      return `linear-gradient(135deg, ${hex}, rgba(${Math.min(r+40,255)},${Math.min(g+40,255)},${Math.min(b+40,255)},0.9))`;
     }
 
-    function dibujarUI() {
-      const w = window.innerWidth, h = window.innerHeight;
-      const cols = w > h ? 4 : 2;
-      const rows = 4 / cols;
-      grid.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;
-      grid.style.gridTemplateRows = `repeat(${rows}, 1fr)`;
-      grid.innerHTML = "";
+    async function iniciar() {
+      const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
+      const data = await res.json();
+      libro = data.libros[Math.floor(Math.random() * data.libros.length)];
+      portadaBloque = Math.floor(Math.random() * 4);
+      do { guiaBloque = Math.floor(Math.random() * 4); } while (guiaBloque === portadaBloque);
+      dibujarBloques();
+    }
 
+    function dibujarBloques() {
+      grid.innerHTML = "";
       libro.palabras.forEach((palabra, i) => {
         const b = document.createElement("div");
         b.className = "block";
@@ -217,16 +186,8 @@
 
         const label = document.createElement("div");
         label.className = "label";
-        label.innerHTML = `${emojis[i]} ${palabra}`;
-
-        if (i === bloqueGuia) {
-          label.className += " guia";
-          label.innerText = "¿Qué sientes?";
-          const msg = document.createElement("div");
-          msg.className = "guia-msg";
-          msg.innerText = "Toca cualquier bloque para descubrir tu libro. Ábrelo. O abre otro que tengas cerca.";
-          b.appendChild(msg);
-        }
+        label.innerText = i === guiaBloque ? "¿Qué sientes?\n(toca cualquier botón)" : palabra;
+        if (i === guiaBloque) label.classList.add("guia");
 
         const frase = document.createElement("div");
         frase.className = "frase";
@@ -246,20 +207,14 @@
 
     function manejarClick(bloque) {
       const i = parseInt(bloque.dataset.index);
-      const children = bloque.children;
       if (revelado) return location.reload();
 
       if (i === portadaBloque) {
-        [...children].forEach(c => c.style.display = "none");
-        children[2].style.display = "flex";
-
         [...grid.children].forEach((blk, j) => {
-          if (j !== i) {
-            blk.children[0].style.display = "none";
-            blk.children[1].style.display = "flex";
-          }
+          blk.children[0].style.display = "none";
+          if (j === i) blk.children[2].style.display = "flex";
+          else blk.children[1].style.display = "flex";
         });
-
         revelado = true;
         ctaZone.style.display = "flex";
       } else {
@@ -275,29 +230,15 @@
       try {
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
-        celebracionMsg.innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨`;
+        celebracionMsg.innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString("es-MX")}</span> libros físicos ✨`;
       } catch {
         celebracionMsg.innerText = "📚 Error al contar libros";
       }
-      setTimeout(() => location.reload(), 3500);
+      setTimeout(() => location.reload(), 3200);
     };
 
-    async function iniciar() {
-      try {
-        const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
-        const data = await res.json();
-        libro = data.libros[Math.floor(Math.random() * data.libros.length)];
-        portadaBloque = Math.floor(Math.random() * 4);
-        do { bloqueGuia = Math.floor(Math.random() * 4); } while (bloqueGuia === portadaBloque);
-        dibujarUI();
-      } catch (e) {
-        console.error("Error cargando contenido:", e);
-      }
-    }
-
     window.addEventListener("load", iniciar);
-    window.addEventListener("resize", dibujarUI);
-    window.addEventListener("orientationchange", dibujarUI);
+    window.addEventListener("resize", dibujarBloques);
   </script>
 </body>
 </html>
