--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
+      width: 100%;
       height: 100%;
       background: #0d0e1a;
       font-family: 'Archivo', sans-serif;
@@ -47,13 +48,12 @@
     }
 
     #grid {
-      position: absolute;
-      inset: 2vw;
+      width: 100%;
+      height: 100%;
       display: grid;
-      gap: 2vw;
+      gap: 0;
       opacity: 0;
       animation: fadeIn 1s ease 6s forwards;
-      z-index: 1;
     }
 
     @media (orientation: landscape) {
@@ -66,46 +66,43 @@
     @media (orientation: portrait) {
       #grid {
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(2, 1fr);
+        grid-template-rows: 1fr 1fr;
       }
     }
 
     .block {
-      border-radius: 24px;
       display: flex;
-      justify-content: center;
       align-items: center;
-      text-align: center;
-      color: #fff;
+      justify-content: center;
+      flex-direction: column;
       font-size: 1.4rem;
       font-weight: bold;
-      cursor: pointer;
+      color: white;
       background-size: 300% 300%;
-      transition: none;
-      padding: 1rem;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
-      position: relative;
-      height: 100%;
       width: 100%;
+      height: 100%;
+      cursor: pointer;
+      box-shadow: inset 0 0 40px rgba(255,255,255,0.05), 0 0 20px rgba(0,0,0,0.6);
+      border-radius: 0;
+      text-align: center;
+      transition: none;
     }
 
     .emoji {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
       font-size: 1.6rem;
-      text-align: center;
-      line-height: 1.4;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      width: 100%;
     }
 
     .accionable {
       font-family: 'Poppins', sans-serif;
       font-size: 1rem;
       opacity: 0;
-      transition: opacity 0.4s ease;
       padding: 1rem;
+      transition: opacity 0.4s ease;
     }
 
     .accionable.show {
@@ -159,6 +156,7 @@
       justify-content: center;
       align-items: center;
       height: 100%;
+      width: 100%;
     }
 
     .portada-flotante img {
@@ -214,7 +212,7 @@
   <div id="overlay"></div>
 
   <script>
-    const emojis = ["🌈", "🔥", "💡", "🧭", "⚡", "🎯", "🪄", "🌟"];
+    const emojis = ["🌈","🔥","💡","🧭","⚡","🎯","🪄","🌟"];
     const gradients = [
       ["#ff6ec4", "#7873f5"],
       ["#42e695", "#3bb2b8"],
